--- a/sass/base/_typographie.scss
+++ b/sass/base/_typographie.scss
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-body{
-    font-family: 'Roboto';
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+body {
+  font-family: "Roboto";
 }
-h4{
-    font-family: 'Shrikhand';
+h4 {
+  font-family: "Shrikhand";
 }
-.titre_menu_coeur{
-    h1{
-    font-family: 'Shrikhand';
-    }
+.titre_menu_coeur {
+  h1 {
+    font-family: "Shrikhand";
+  }
 }
