--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,9 @@
+
 .btn_description {
+  &:hover{
+    background: linear-gradient(to left top, #9256dcbc, #ff79d9ce);
+    box-shadow: 0px 8px 17px rgba(56, 56, 56, 0.33);
+  }
   padding: 18px 30px 18px 30px;
   border-radius: 30px;
   border: none;
@@ -7,7 +12,7 @@
   margin-bottom: 60px;
   background: linear-gradient(to left top, #9356dc, #ff79da);
   color: white;
-  box-shadow: 0px 6px 15px rgba(91, 91, 91, 0.307);
+  box-shadow: 0px 6px 15px rgba(75, 75, 75, 0.307);
   cursor: pointer;
 }
 .btn_restaurants_page {
@@ -24,8 +29,6 @@
   cursor: pointer;
   @media (min-width: 517px) and (max-width: 790px) {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 0px;
+
   }
 }
