--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -6,6 +6,7 @@
 }
 .background {
   background-color: #f6f6f6;
+  height: 100%;
   position: relative;
   margin-top: 250px;
   border-top-left-radius: 40px;
@@ -14,6 +15,7 @@
 .menu_complet {
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 20px;
   h1 {
     padding-top: 10px;
     font-size: 30px;
@@ -53,6 +55,7 @@
   }
 }
 .menu_entrees {
+ 
   h2 {
     font-size: 18px;
     font-weight: 400;
@@ -66,6 +69,12 @@
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    animation: affichageentree 1.5s forwards;
+    &:hover{
+      .prix_gras{
+      animation: decalage 1.5s forwards;
+      }
+      }
 
     &:hover {
       .check {
@@ -134,9 +143,7 @@ p {
 .prix_gras {
   font-weight: 700;
   padding-left: 100px;
-  &:hover {
-    padding-right: 100px;
-  }
+
 }
 
 .menu_plats {
@@ -154,6 +161,12 @@ p {
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    animation: affichageplat 1.5s forwards;
+    &:hover{
+      .prix_gras{
+      animation: decalage 1.5s forwards;
+      }
+      }
 
     &:hover {
       .check {
@@ -236,6 +249,12 @@ p {
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    animation: affichagedessert 1.5s forwards;
+    &:hover{
+      .prix_gras{
+      animation: decalage 1.5s forwards;
+      }
+      }
 
     &:hover {
       .check {
@@ -350,5 +369,29 @@ p {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+@keyframes affichageentree{
+  0%{
+      opacity: 0;
+  }
+  20%{
+opacity: 1;
+  }
+}
+@keyframes affichageplat{
+  0%{
+    opacity: 0;
+  }
+  60%{
+    opacity: 1;
+  }
+}
+@keyframes affichagedessert {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
   }
 }
